--- a/layout.css
+++ b/layout.css
@@ -1,10 +1,16 @@
+body {
+  font-family: "Comic Neue", sans-serif;
+}
+
 .container {
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .row {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .column-full {
