--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,34 @@ button {
   box-shadow: 5px 5px;
   background-color: white;
 }
+
+button:hover {
+  background-color: rgb(149, 188, 242);
+  cursor: pointer;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(64,64,64);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: white;
+  width: 300px;
+  height: 150px;
+}
+
+.view {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
