--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,18 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(64,64,64);
+  background-color: rgb(64, 64, 64);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal {
+  margin: auto;
+  margin-top: 500px;
   background-color: white;
-  width: 300px;
-  height: 150px;
+  width: 500px;
+  height: auto;
 }
 
 .view {
