--- a/layout.css
+++ b/layout.css
@@ -2,6 +2,11 @@ body {
   font-family: "Comic Neue", sans-serif;
 }
 
+#text {
+  display: block;
+  width: 100%;
+}
+
 .container {
   margin: 0 auto;
   max-width: 100%;
@@ -19,4 +24,9 @@ body {
 
 .justify-center-content {
   justify-content: center;
+}
+
+.submitcontainer {
+  display: flex;
+  justify-content: end;
 }
