--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(64, 64, 64);
+  background-color: rgb(64, 64, 64, 90%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,7 @@ button:hover {
 
 .modal {
   margin: auto;
-  margin-top: 500px;
+  margin-top: 150px;
   background-color: white;
   width: 500px;
   height: auto;
