fixed modal container

--- a/layout.css
+++ b/layout.css
@@ -2,11 +2,14 @@ body {
   font-family: "Comic Neue", sans-serif;
 }
 
-#text {
-  display: block;
+input {
   width: 100%;
+  margin: 5px;
 }
 
+textarea {
+  width: 100%;
+}
 .container {
   margin: 0 auto;
   max-width: 100%;
@@ -26,7 +29,20 @@ body {
   justify-content: center;
 }
 
+button.submitentry {
+  text-align: right;
+}
+
+.align-right {
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .submitcontainer {
-  display: flex;
-  justify-content: end;
+  margin: 10px 0;
+}
+
+.selectcontainer {
+  width: 80%;
+  margin: 10px auto;
 }
