--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,55 @@ select {
 .buttonboxshadow {
   box-shadow: 2px 2px;
 }
+
+.space-between {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.dayBox {
+  border: 4px solid black;
+  background-color: white;
+  width: 150px;
+  height: 100px;
+  font-size: 1.2rem;
+}
+
+h2 {
+  margin: 2%;
+}
+
+table {
+  border: 3px solid black;
+  width: 80%;
+  margin: auto;
+}
+
+table thead > tr:nth-child(1) {
+  background-color: rgb(135, 133, 133);
+  color: black;
+  text-align: left;
+  padding: 8px;
+  height: 20px;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
+  height: 20px;
+}
+
+tr:nth-child(odd) {
+  background-color: rgb(221, 220, 220);
+}
+
+.add-entry {
+  width: 175px;
+  height: 45px;
+  border: 2px solid black;
+  box-shadow: 5px 5px;
+  background-color: white;
+  margin-top: 20px;
+}
